--- a/projects/angular-britecharts/tsconfig.lib.json
+++ b/projects/angular-britecharts/tsconfig.lib.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "allowJs": true,
     "outDir": "../../out-tsc/lib",
     "target": "es2015",
     "module": "es2015",
@@ -10,6 +11,7 @@
     "inlineSources": true,
     "emitDecoratorMetadata": true,
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "experimentalDecorators": true,
     "importHelpers": true,
     "types": [],
